<resources>
    <string name="app_name">SocialScape</string>

    <string name="home">Home</string>
    <string name="messages">Messages</string>
    <string name="search">Search "Your Friend"</string>
    <string name="searchs">Search</string>
    <string name="profile">Profile</string>
    <string name="on_board_skip">Skip</string>
    <string name="btn_private">Private</string>
    <string name="btn_public">Public</string>
    <string name="on_board_Next">Next</string>
    <string name="welcome_to_the_fun_nmedia_x">Welcome To the Fun \nMedia X</string>
    <string name="best_social_app_to_nmake_new_friends">Best Social App to \nMake New Friends</string>
    <string name="enjoy_your_life_every_time_every_where">Enjoy Your Life Every Time, Every Where</string>
    <string name="back">Back</string>
    <string name="create_account">Create Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">User Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account_to_keep_exploring_amazing_destinations_around_the_world">Create Account to keep exploring amazing destinations around the world!</string>
    <string name="welcome">Welcome</string>
    <string name="by_creating_an_account_you_agree_to_our">By creating an account, you agree to our</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions ]]></string>
    <string name="and_agree_to">and agree to </string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="login_transition" translatable="false">login_transition</string>
    <string name="signup_transition" translatable="false">signup_transition</string>
    <string name="reset_transition" translatable="false">reset_transition</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="please_enter_your_email_address_to_reset_your_password">Please enter your email address to reset your password</string>
    <string name="don_t_worry_i_ll_help_you">Don\'t Worry I\'ll Help You</string>
    <string name="send_insructions">Send Insructions</string>
    <string name="create_new_password">Create New Password</string>
    <string name="enter_password">Enter password</string>
    <string name="reenter_password">Re-enter password</string>
    <string name="your_new_password_must_be_different_from_previous_used_passwords">Your new password must be different from previous used passwords.</string>
    <string name="login">Login</string>
    <string name="media_x">Media X</string>
    <string name="jana_strassmann">jana strassmann</string>
    <string name="artist">@Artist</string>
    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <string name="share">Share</string>
    <string name="liked_by_you_and_500_others">Liked by you and 500 others</string>
    <string name="hello_my_friends_today_i_did_holl_for_the_first_time_it_was_a_crazy_experience">Hello my friends today i did holl for the first time it was a crazy experience.</string>
    <string name="travel">#travel</string>
    <string name="discover">Discover</string>
    <string name="accounts">Accounts</string>
    <string name="tags">Tags</string>
    <string name="clear_all">Clear All</string>
    <string name="recent">Recent</string>
    <string name="ui_designer">UI Designer</string>
    <string name="shrutti">____.shrutti___</string>
    <string name="_1_0m_posts">1.0M Posts</string>
    <string name="hello">#hello</string>
    <string name="activity">Activity</string>
    <string name="just_now">Just Now</string>
    <string name="amy_jasus">amy_jasus</string>
    <string name="friend_requests">Friend Requests</string>
    <string name="post">Post</string>
    <string name="reject">Reject</string>
    <string name="confirm">Confirm</string>
    <string name="alexandre_paiva">Alexandre Paiva</string>
    <string name="ringing">Ringing</string>
    <string name="_12_45">12:45</string>
    <string name="swipe_up_to_send_message">Swipe up to send message</string>
    <string name="video_call">Video Call</string>
    <string name="edit">Edit</string>
    <string name="followers">Followers</string>
    <string name="_25k">25K</string>
    <string name="_256">256</string>
    <string name="following">Following</string>
    <string name="_100">100</string>
    <string name="follow">Follow</string>
    <string name="architech">Architech</string>
    <string name="emlen_784">_emlen.784</string>
    <string name="suggest_for_you">Suggest for you</string>
    <string name="settings">Settings</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="language">Language</string>
    <string name="friends">Friends</string>
    <string name="preferences">Preferences</string>
    <string name="notifications">Notifications</string>
    <string name="account_privacy"><![CDATA[Account & Privacy]]></string>
    <string name="theme">Theme</string>
    <string name="media_x_help">Media X Help</string>
    <string name="about">About</string>
    <string name="save">Save</string>
    <string name="profile_image">Profile Image</string>
    <string name="remove">Remove</string>
    <string name="pick_new">Pick New</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="bio">Bio</string>
    <string name="industry">Industry</string>
    <string name="website">Website</string>
    <string name="danger_zone">Danger Zone</string>
    <string name="delete_account">Delete Account</string>
    <string name="photo">Photo</string>
    <string name="log_out">Log Out</string>
    <string name="paiva">Paiva</string>
    <string name="Sign_up">Sign Up</string>
    <string name="on_board_start">Start</string>
    <string name="sign_up">Sign up</string>
    <string name="enter_your_full_name">Enter Your Full Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="create_new_post">Create New Post</string>
    <string name="chineze">chineze</string>
    <string name="what_s_on_your_mind">What\'s on your mind?</string>
    <string name="also_post_on">Also post on</string>
    <string name="twitter">Twitter</string>
    <string name="facebook">Facebook</string>
    <string name="upload_image">Upload Image</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="are_you_sure_you_want_to_delete_this_post">Are you sure you want to delete this post?</string>
    <string name="hello_friends">Hello Friends!</string>
    <string name="your_comment">Your comment...</string>

</resources>